# data-engineering-bootcamp

./: .gitignore  my_script.py
00-bootcamp-project/: docker-compose.yml  ingest_data_to_gcs.py  load_data_from_gcs_to_bigquery.py  load_data_to_bigquery.py  pyproject.toml
00-bootcamp-project/dags/: course-data.parquet  greenery-summary-data-with-embeddings.parquet  greenery-summary-data.parquet  greenery_addresses_data_pipeline.py  greenery_dbt_dag.py  greenery_events_data_pipeline.py  greenery_llm_rag_pipeline.py  greenery_order_items_data_pipeline.py  greenery_orders_data_pipeline.py  greenery_products_data_pipeline.py  greenery_promos_data_pipeline.py  greenery_users_data_pipeline.py  llm_course_data_pipeline.py
00-bootcamp-project/docker/: Dockerfile-airflow
00-bootcamp-project/pyspark/: transform.py  transform_addresses.py  transform_events.py  transform_order_items.py  transform_orders.py  transform_products.py  transform_promos.py  transform_users.py
00-bootcamp-project/qna_app/: app.py  pyproject.toml
04-automated-data-pipelines/: docker-compose-with-spark.yml  docker-compose.yml
04-automated-data-pipelines/dags/: demo_gcs.py  (+3 more)
06-data-infrastructure-for-gen-ai-app/: ai_assistant_for_course_recommendations.py  embeddings.py  llm_api_with_context_enhanced_prompts_textual.py  llm_api_with_context_enhanced_prompts_transactional.py  llm_api_with_standalone_prompts.py  similarity_search.py  store_embeddings_in_bigquery.py
coincap/: exchanges.csv  get_exchanges.py  pyproject.toml
share-db/: docker-compose.yml  pyproject.toml  upload_data.py
(+26 files in other folders)
